- Improved: use double instead of float for linear model and regression
- Improved: use CMake's FindOpenMP to detect and configure OpenMP
- Improved: prevent configurations where CMTK_USE_THREADS is ON but
    CMTK_BUILD_SMP is OFF.
- Improved: better integration of Doxygen into CMake build system
- Improved: better output of stacked image information in dcm2image

- Removed: cmtk::MathUtil::CoefficientOfCorrelation was removed because it
    turned out to be a redundant, numerically unstable variant of
    MathUtil::Correlation
- Removed: deprecated options -m/--metric removed from registration and warp
    tools.
- Removed: obsolete tool skeleton "detect_interleave"
- Removed: obsolete "--threads" option from all remaining command lines; using
    CMTK_NUM_THREADS environment variable is more flexible and versatile.


Release CMTK-0.2.4 (2009-05-11):

- Platforms: vastly improved compatibility with VisualStudio 2008; initial
    implementation of Windows thread parallelism
- Platforms: offer RPM package on Unix/Linux systems and NSIS/ZIP on Windows

- Build: hierarchical SMP control (not complete)

- Changed: symmetry_plane tool now named "sympl"
- Changed: model tool now named "glm"
- Changed: QR decomposition now using AlgLib code

- API: all classes have been moved to cmtk namespace
- API: added "Unstable" library for testing code that is under development.
- API: renamed all file names from igsXXX to cmtkXXX
- API: eliminated obsolete and tedius "igsCoordinateAxis" enum typedef; had to
    change calls to igsUniformVolume::GetDelta() as a result.
- API: moved byte swap functions to System/cmtkMemory.h
- API: renamed most IGS_XXX symbols to CMTK_XXX

- Added: safe C++ array allocator with exception handling; use this for all
    array allocations
- Added: "Unstable" library is no longer built by default, but only when
    enabled in CMake.
- Added: unstable "jidb" tool for joint iterative deblurring